--- a/project2.html
+++ b/project2.html
@@ -33,7 +33,7 @@
     
     <div id="content">
        <div class="con1 con">
-        <h2 class="tit">퀴즈노스 주문 어플리케이션 제작</h2>
+        <h2 class="tit">퀴즈노스 주문 어플리케이션 디자인 제작</h2>
         <p class="desc">샌드위치 가게인 퀴즈노스를 위한 주문 어플리케이션을 만들어 봤습니다.  </p>
         <ul class="desc_list">
             <li><h3 class="stit">컨셉</h3>
