--- a/project4.html
+++ b/project4.html
@@ -33,11 +33,11 @@
     
     <div id="content">
        <div class="con3 con">
-        <h2 class="tit"><a href="http://sher081.wixsite.com/mysite">wonderwizlab</a></h2>
-        <p class="desc">클라이언트와 프리랜서를 이어주는 플랫폼인 원더위즈를 이용하는 사람들을 위한 커뮤니티 사이트</p>
+        <h2 class="tit"><a href="http://repurels.com">리퓨어생명과학</a></h2>
+        <p class="desc">기업 소개 사이트</p>
         <ul class="desc_list">
             <li><h3 class="stit">컨셉</h3>
-            <p class="sdesc">심플, 유머러스</p></li>
+            <p class="sdesc">비지니스, 생명과학, 바이오</p></li>
             <li><h3 class="stit">컬러 계획</h3>
             <ul class="color">
             <li><p class="sdesc">주조색</p><div class="core"></div></li>
@@ -46,13 +46,13 @@
              </ul>
             </li>
             <li><h3 class="stit">제작 기간</h3>
-            <p class="sdesc">2018.01 ~ 2018.02 </p></li>
+            <p class="sdesc">2019.05 ~ 2019.05 </p></li>
              <li><h3 class="stit">클라이언트</h3>
-            <p class="sdesc">wonderwiz </p></li>
+            <p class="sdesc">리퓨어생명과학 </p></li>
         </ul>
         </div>
         <div class="img">
-            <img src="images/macbook.jpg" alt="">
+            <img src="images/mockup.png" alt="">
         </div>
     </div>
 
