--- a/project5.html
+++ b/project5.html
@@ -33,11 +33,11 @@
     
     <div id="content">
        <div class="con4 con">
-        <h2 class="tit"><a href="https://sher081.wixsite.com/type01">wonderwiz page</a></h2>
-        <p class="desc">클라이언트와 프리랜서를 이어주는 플랫폼 사이트 제작</p>
+        <h2 class="tit"><a href="http://m.repureus.com">케토계산기</a></h2>
+        <p class="desc">당질을 제한하고 지방 섭취비율을 높이는 저당고지식에 필요한 다량영양소 섭취량을 결정하는데 도움을 주기위해 제작된 계산기</p>
         <ul class="desc_list">
             <li><h3 class="stit">컨셉</h3>
-            <p class="sdesc">심플, 유머러스</p></li>
+            <p class="sdesc">직관적, </p></li>
             <li><h3 class="stit">컬러 계획</h3>
             <ul class="color">
             <li><p class="sdesc">주조색</p><div class="core"></div></li>
@@ -46,9 +46,9 @@
              </ul>
             </li>
             <li><h3 class="stit">제작 기간</h3>
-            <p class="sdesc">2018.01 ~ 2018.02 </p></li>
+            <p class="sdesc">2018.11 ~ 2018.12 </p></li>
              <li><h3 class="stit">클라이언트</h3>
-            <p class="sdesc">wonderwiz </p></li>
+            <p class="sdesc">리퓨어생명과학</p></li>
         </ul>
         </div>
         <div class="img">
