--- a/project1.html
+++ b/project1.html
@@ -35,8 +35,8 @@
     <div id="content">
        <div class="con">
         <h2 class="tit">농심 홈페이지 리뉴얼</h2>
-            <p class="desc"><a href="https://shelry.github.io/nongshim_project/">https://shelry.github.io/nongshim_project/</a><br>
-                기존의 여러 단계로 메뉴가 구성된 홈페이지에서 불필요한 요소를 정리하여 심플한 웹 사이트를 구축했습니다. </p>
+            <span class="desc"><a href="https://shelry.github.io/nongshim_project/">https://shelry.github.io/nongshim_project/</a><br>
+                기존의 여러 단계로 메뉴가 구성된 홈페이지에서 불필요한 요소를 정리하여 심플한 웹 사이트를 구축했습니다. </span>
         <ul class="desc_list">
             <li><h3 class="stit">컨셉</h3>
             <p class="sdesc">심플, 트렌디</p></li>
