--- a/project3.html
+++ b/project3.html
@@ -34,8 +34,10 @@
     
     <div id="content">
        <div class="con2 con">
-        <h2 class="tit"><a href="https://shelry.github.io/US/">Union Speaker</a></h2>
-        <p class="desc">스피커와 이어폰이 결합된 블루투스 기기를 소개하는 웹사이트입니다.  </p>
+        <h2 class="tit">Union Speaker</h2>
+        <span class="desc">
+            <a href="https://shelry.github.io/US/">https://shelry.github.io/US/</a><br>
+            스피커와 이어폰이 결합된 블루투스 기기를 소개하는 웹사이트입니다.  </span>
         <ul class="desc_list">
             <li><h3 class="stit">컨셉</h3>
             <p class="sdesc">심플, 사용자 경험 중시</p></li>
