--- a/project4.html
+++ b/project4.html
@@ -34,8 +34,10 @@
     
     <div id="content">
        <div class="con3 con">
-        <h2 class="tit"><a href="http://repurels.com">리퓨어생명과학</a></h2>
-        <p class="desc">기업 소개 사이트</p>
+        <h2 class="tit">리퓨어생명과학</h2>
+        <span class="desc">
+            <a href="http://repurels.com">http://repurels.com</a><br>
+            기업 소개 사이트</span>
         <ul class="desc_list">
             <li><h3 class="stit">컨셉</h3>
             <p class="sdesc">비지니스, 생명과학, 바이오</p></li>
