--- a/project5.html
+++ b/project5.html
@@ -34,8 +34,9 @@
     
     <div id="content">
        <div class="con4 con">
-        <h2 class="tit"><a href="http://m.repureus.com">케토계산기</a></h2>
-        <p class="desc">당질을 제한하고 지방 섭취비율을 높이는 저당고지식에 필요한 다량영양소 섭취량을 결정하는데 도움을 주기위해 제작된 계산기</p>
+        <h2 class="tit">케토계산기</h2>
+        <span class="desc"><a href="http://m.repureus.com">http://m.repureus.com</a><br>
+            당질을 제한하고 지방 섭취비율을 높이는 저당고지식에 필요한 다량영양소 섭취량을 결정하는데 도움을 주기위해 제작된 계산기</span>
         <ul class="desc_list">
             <li><h3 class="stit">컨셉</h3>
             <p class="sdesc">직관적, </p></li>
