--- a/project1.html
+++ b/project1.html
@@ -24,7 +24,7 @@
 
     <header id="header">
         <ul id="myMenu">
-             <li data-menuanchor="ima_d"><a href="#ima_d">who i am</a></li>
+             <li><a href="index.html"><img src="images/arr.png" alt=""></a></li>
             <li data-menuanchor="project" class="active"><a href="#project">project</a></li>
            
             <li data-menuanchor="contact"><a href="#contact">contact</a></li>
