--- a/project1.html
+++ b/project1.html
@@ -24,10 +24,9 @@
 
     <header id="header">
         <ul id="myMenu">
-             <li><a href="index.html"><img src="images/arr.png" alt=""></a></li>
+             <li>this</li>
             <li data-menuanchor="project" class="active"><a href="#project">project</a></li>
-           
-            <li data-menuanchor="contact"><a href="#contact">contact</a></li>
+            <li>is</li>
         </ul>
          <h1 class="logo"><a href="index.html"><img src="images/arr.png" alt=""></a></h1>
     </header>
