--- a/project2.html
+++ b/project2.html
@@ -24,10 +24,9 @@
 
     <header id="header">
         <ul id="myMenu">
-             <li data-menuanchor="ima_d"><a href="#ima_d">who i am</a></li>
-            <li data-menuanchor="project" class="active"><a href="#project">project</a></li>
-           
-            <li data-menuanchor="contact"><a href="#contact">contact</a></li>
+            <li>this</li>
+            <li class="active">project</li>
+            <li>is</li>
         </ul>
          <h1 class="logo"><a href="index.html"><img src="images/arr.png" alt=""></a></h1>
     </header>
