--- a/project4.html
+++ b/project4.html
@@ -25,7 +25,7 @@
     <header id="header">
         <ul id="myMenu">
             <li>this</li>
-            <li data-menuanchor="project" class="active"><a href="#project">project</a></li>
+            <li class="active">project</li>
             <li>is</li>
         </ul>
          <h1 class="logo"><a href="index.html"><img src="images/arr.png" alt=""></a></h1>
