--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
             <li data-menuanchor="contact"><a href="#contact">contact</a></li>
         </ul>
-        <h1 class="logo"><a href="https://github.com/shelry/port">https://github.com/shelry/port</a></h1>
+        <h1 class="link"><a href="https://github.com/shelry/port">https://github.com/shelry/port</a></h1>
     </header>
     
     <div id="fullpage">
