--- a/project1.html
+++ b/project1.html
@@ -24,10 +24,10 @@
 
     <header id="header">
         <ul id="myMenu">
-             <li>this</li>
-             <li class="active">project</li>
-            <li>is</li>
-        </ul>
+
+        </ul><li>this</li>
+        <li class="active">project</li>
+        <li>is</li>
          <h1 class="logo"><a href="index.html"><img src="images/arr.png" alt=""></a></h1>
     </header>
     
