--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </ul>
             <h2 class="stit">I'M a _________Designer</h2>
 
-               <h3 class="stit">SKILL</h3>
+               <h3 class="stit"></h3>
                   <div class="pos">
                    <div class="chart">
                       <canvas id='c'></canvas>
