--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.js"></script>
     <script src="js/main.js"></script>
     <script src="js/fullpagejs.js"></script>
-    <script src="js/chart.js"></script>
     
 </head>
 
@@ -39,20 +38,22 @@
                 <li>product</li>
                 <li >good</li>
             </ul>
-            <h2 class="stit">I'M a _________Designer</h2>
+            <h2 class="stit">I'M a _______Creater</h2>
 
-               <h3 class="stit"></h3>
-                  <div class="pos">
-                   <div class="chart">
-                      <canvas id='c'></canvas>
-                    </div>
-                  </div>
+            <h3 class="stit"></h3>
+            <div class="pos">
+                <div class="skill_1"></div>
+                <div class="skill_2"></div>
+                <div class="skill_3"></div>
+                <div class="skill_4"></div>
+                <div class="skill_5"></div>
+            </div>
             <ul class="skill">
                 <li><p class="desc">Photoshop</p></li>
                 <li><p class="desc">Illustrator</p></li>
-                <li><p class="desc">HTML</p></li>
-                <li><p class="desc">css, jquery</p></li>
-                <li><p class="desc">3D Modeling/Rendering</p></li>
+                <li><p class="desc">HTML/css</p></li>
+                <li><p class="desc">javascript</p></li>
+                <li><p class="desc">ux/ui</p></li>
             </ul>
         </div>
         
