--- a/project2.html
+++ b/project2.html
@@ -15,8 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/vendors/scrolloverflow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/fullpagejs.js"></script>
-    <script src="js/chart.js"></script>
+    
     
 </head>
 
@@ -51,9 +50,7 @@
             <p class="sdesc">개인 프로젝트 </p></li>
         </ul>
         </div>
-        <div class="img">
-            <img src="images/iPhone%206%20Designer%20Desk.png" alt="">
-        </div>
+        <div class="img quiz"></div>
     </div>
 
 </body>
