--- a/project4.html
+++ b/project4.html
@@ -15,8 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/vendors/scrolloverflow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/fullpagejs.js"></script>
-    <script src="js/chart.js"></script>
+
     
 </head>
 
@@ -53,9 +52,7 @@
             <p class="sdesc">리퓨어생명과학 </p></li>
         </ul>
         </div>
-        <div class="img">
-            <img src="images/mockup.png" alt="">
-        </div>
+        <div class="img repure"></div>
     </div>
 
 </body>
