--- a/project1.html
+++ b/project1.html
@@ -15,8 +15,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/vendors/scrolloverflow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/fullpagejs.js"></script>
-    <script src="js/chart.js"></script>
     
 </head>
 
@@ -24,16 +22,16 @@
 
     <header id="header">
         <ul id="myMenu">
-
-        </ul><li>this</li>
-        <li class="active">project</li>
-        <li>is</li>
+            <li>this</li>
+            <li class="active">project</li>
+            <li>is</li>
+        </ul>
          <h1 class="logo"><a href="index.html"><img src="images/arr.png" alt=""></a></h1>
     </header>
     
     <div id="content">
        <div class="con">
-        <h2 class="tit">농심 홈페이지 리뉴얼</h2>
+        <h2 class="tit"><a href="https://shelry.github.io/nongshim_project/">농심 홈페이지 리뉴얼</a></h2>
             <span class="desc"><a href="https://shelry.github.io/nongshim_project/">https://shelry.github.io/nongshim_project/</a><br>
                 기존의 여러 단계로 메뉴가 구성된 홈페이지에서 불필요한 요소를 정리하여 심플한 웹 사이트를 구축했습니다. </span>
         <ul class="desc_list">
@@ -52,9 +50,7 @@
             <p class="sdesc">개인 프로젝트 </p></li>
         </ul>
         </div>
-        <div class="img">
-            <img src="images/OT130Y1.png" alt="">
-        </div>
+        <div class="img nong"></div>
     </div>
 
 </body>
