--- a/project5.html
+++ b/project5.html
@@ -15,8 +15,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/vendors/scrolloverflow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/fullpagejs.js"></script>
-    <script src="js/chart.js"></script>
+
     
 </head>
 
@@ -52,9 +51,7 @@
             <p class="sdesc">리퓨어생명과학</p></li>
         </ul>
         </div>
-        <div class="img">
-            <img src="images/macbook2.jpg" alt="">
-        </div>
+        <div class="img keto"></div>
     </div>
 
 </body>
