--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <img src="images/profile-15.png" alt="">
                 <p class="name">Kim jungmin</p>
                 <p class="desc">010.3325.0247</p>
-                <p class="desc">sher_@naver.com</p>
+                <p class="desc">workimjm@gmail.com</p>
                 <p class="desc"><a href="https://github.com/shelry/port">https://github.com/shelry/port</a></p>
             </div>
         </div>
