--- a/project3.html
+++ b/project3.html
@@ -4,16 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMaND</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,400,900&display=swap&subset=korean" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,700,900" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Gothic+A1:400,700" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/vendors/easings.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/vendors/scrolloverflow.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.js"></script>
     <script src="js/main.js"></script>
 
     
@@ -32,7 +27,7 @@
     
     <div id="content">
        <div class="con2 con">
-        <h2 class="tit">Union Speaker</h2>
+           <h2 class="tit"> <a href="https://shelry.github.io/US/">Union Speaker</a></h2>
         <span class="desc">
             <a href="https://shelry.github.io/US/">https://shelry.github.io/US/</a><br>
             스피커와 이어폰이 결합된 블루투스 기기를 소개하는 웹사이트입니다.  </span>
