--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IMaND</title>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,400,900&display=swap&subset=korean" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+KR:100,400,700,900&display=swap&subset=korean" rel="stylesheet">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/common.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.css" rel="stylesheet">
@@ -35,8 +35,9 @@
                 <li class="on">web</li>
                 <li>ux/ui</li>
                 <li>mobile</li>
+                <li>web</li>
                 <li>product</li>
-                <li >good</li>
+                <li>good</li>
             </ul>
             <h2 class="stit">I'M a _______Creater</h2>
 
@@ -47,6 +48,7 @@
                 <div class="skill_3"></div>
                 <div class="skill_4"></div>
                 <div class="skill_5"></div>
+                <div class="skill_6"></div>
             </div>
             <ul class="skill">
                 <li><p class="desc">Photoshop</p></li>
@@ -54,17 +56,60 @@
                 <li><p class="desc">HTML/css</p></li>
                 <li><p class="desc">javascript</p></li>
                 <li><p class="desc">ux/ui</p></li>
+                <li><p class="desc">framework</p></li>
             </ul>
         </div>
         
         <div id="sec2" class="section">
-            <ul class="project_list">
-                <li><a href="project4.html"><img src="images/pro_some4.jpg" alt=""></a></li>
-                <li><a href="project5.html"><img src="images/pro_some5.jpg" alt=""></a></li>
-                <li><a href="project1.html"><img src="images/pro_some1.jpg" alt=""></a></li>
-                <li><a href="project2.html"><img src="images/pro_some2.jpg" alt=""></a></li>
-                <li><a href="project3.html"><img src="images/pro_some3.jpg" alt=""></a></li>
-                <li><a href="project6.html"><img src="images/pro_some6.jpg" alt=""></a></li>
+            <ul class="project_list clearfix">
+                <li>
+                  <a href="project4.html">
+                   <div class="context">
+                    <p>웹사이트 제작</p>
+                    <span>제작기간 : 2019.05 - 2019.05</span>
+                    </div>
+                  </a>
+                </li>
+                <li>
+                    <a href="project5.html">
+                        <div class="context">
+                            <p>웹사이트 제작</p>
+                            <span>제작기간 : 2018.11 - 2018.12</span>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="project1.html">
+                        <div class="context">
+                            <p>웹사이트 제작</p>
+                            <span>제작기간 : 2018.11 - 2018.12</span>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="project2.html">
+                        <div class="context">
+                            <p>컨셉 어플 디자인</p>
+                            <span>제작기간 : 2018.06 - 2018.06</span>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="project3.html">
+                        <div class="context">
+                            <p>제품 소개 웹사이트</p>
+                            <span>제작기간 : 2018.09 - 2018.10</span>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="project6.html">
+                        <div class="context">
+                            <p>게임 어플 디자인</p>
+                            <span>제작기간 : 2016.03 - 2016.04</span>
+                        </div>
+                    </a>
+                </li>
             </ul>
         </div>
         <div id="sec3" class="section">
