--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/vendors/easings.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/vendors/scrolloverflow.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.1/fullpage.min.js"></script>
-    <script src="js/main.js"></script>
     <script src="js/fullpagejs.js"></script>
-    
 </head>
 
 <body>
@@ -115,7 +113,7 @@
         <div id="sec3" class="section">
             <div class="profile">
                 <img src="images/profile-15.png" alt="">
-                <p class="name">Kim jungmin</p>
+                <p class="name">kim jungmin</p>
                 <p class="desc">010.3325.0247</p>
                 <p class="desc">workimjm@gmail.com</p>
                 <p class="desc"><a href="https://github.com/shelry/port">https://github.com/shelry/port</a></p>
@@ -126,6 +124,6 @@
       
         </div>-->
     </div>
-
+        <script src="js/main.js"></script>
 </body>
 </html>
