--- a/project2.html
+++ b/project2.html
@@ -28,7 +28,7 @@
     <div id="content">
        <div class="con1 con">
         <h2 class="tit">퀴즈노스 주문 어플리케이션 디자인 제작</h2>
-        <span class="desc">샌드위치 가게인 퀴즈노스를 위한 주문 어플리케이션을 만들어 봤습니다.  </span>
+        <span class="desc">샌드위치 가게인 퀴즈노스를 위한 주문 어플리케이션을 만들어 봤습니다. (개인 프로젝트) </span>
         <ul class="desc_list">
             <li><h3 class="stit">컨셉</h3>
             <p class="sdesc">귀여움, 경쾌</p></li>
@@ -41,8 +41,8 @@
             </li>
             <li><h3 class="stit">제작 기간</h3>
             <p class="sdesc">2018.07 ~ 2018.8 </p></li>
-             <li><h3 class="stit">프로젝트 성격</h3>
-            <p class="sdesc">개인 프로젝트 </p></li>
+             <li><h3 class="stit">프로젝트 역할(기여도)</h3>
+            <p class="sdesc">기획, 디자인</p></li>
         </ul>
         </div>
         <div class="img quiz"></div>
