--- a/project1.html
+++ b/project1.html
@@ -28,7 +28,7 @@
        <div class="con">
         <h2 class="tit"><a href="https://shelry.github.io/nongshim_project/">농심 홈페이지 리뉴얼</a></h2>
             <span class="desc"><a href="https://shelry.github.io/nongshim_project/">https://shelry.github.io/nongshim_project/</a><br>
-                기존의 여러 단계로 메뉴가 구성된 홈페이지에서 불필요한 요소를 정리하여 심플한 웹 사이트를 구축했습니다. </span>
+                기존의 여러 단계로 메뉴가 구성된 홈페이지에서 불필요한 요소를 정리하여 심플한 웹 사이트를 구축했습니다. (개인 프로젝트)</span>
         <ul class="desc_list">
             <li><h3 class="stit">컨셉</h3>
             <p class="sdesc">심플, 트렌디</p></li>
@@ -41,8 +41,8 @@
             </li>
             <li><h3 class="stit">제작 기간</h3>
             <p class="sdesc">2018.08 ~ 2018.9 </p></li>
-             <li><h3 class="stit">프로젝트 성격</h3>
-            <p class="sdesc">개인 프로젝트 </p></li>
+             <li><h3 class="stit">프로젝트 역할(기여도)</h3>
+            <p class="sdesc">기획, 디자인, 퍼블리싱(100%)</p></li>
         </ul>
         </div>
         <div class="img nong"></div>
