--- a/project5.html
+++ b/project5.html
@@ -42,8 +42,8 @@
             </li>
             <li><h3 class="stit">제작 기간</h3>
             <p class="sdesc">2018.11 ~ 2018.12 </p></li>
-             <li><h3 class="stit">클라이언트</h3>
-            <p class="sdesc">리퓨어생명과학</p></li>
+             <li><h3 class="stit">프로젝트 역할(기여도)</h3>
+            <p class="sdesc">모바일/웹 퍼블리싱(60%)<br>크로스브라우징(100%)</p></li>
         </ul>
         </div>
         <div class="img keto"></div>
