--- a/project4.html
+++ b/project4.html
@@ -43,8 +43,9 @@
             </li>
             <li><h3 class="stit">제작 기간</h3>
             <p class="sdesc">2019.05 ~ 2019.05 </p></li>
-             <li><h3 class="stit">클라이언트</h3>
-            <p class="sdesc">리퓨어생명과학 </p></li>
+             <li><h3 class="stit">프로젝트 역할(기여도)</h3>
+                <p class="sdesc">웹/모바일 퍼블리싱(90%)<br> 모바일 UI디자인(90%)</p>
+            </li>
         </ul>
         </div>
         <div class="img repure"></div>
