--- a/project3.html
+++ b/project3.html
@@ -30,7 +30,7 @@
            <h2 class="tit"> <a href="https://shelry.github.io/US/">Union Speaker</a></h2>
         <span class="desc">
             <a href="https://shelry.github.io/US/">https://shelry.github.io/US/</a><br>
-            스피커와 이어폰이 결합된 블루투스 기기를 소개하는 웹사이트입니다.  </span>
+            스피커와 이어폰이 결합된 블루투스 기기를 소개하는 웹사이트입니다.(개인 프로젝트)  </span>
         <ul class="desc_list">
             <li><h3 class="stit">컨셉</h3>
             <p class="sdesc">심플, 사용자 경험 중시</p></li>
@@ -43,8 +43,8 @@
             </li>
             <li><h3 class="stit">제작 기간</h3>
             <p class="sdesc">2018.09 ~ 2018.10 </p></li>
-             <li><h3 class="stit">프로젝트 성격</h3>
-            <p class="sdesc">개인 프로젝트 </p></li>
+             <li><h3 class="stit">프로젝트 역할(기여도)</h3>
+            <p class="sdesc">기획, 디자인, 퍼블리싱(100%)</p></li>
         </ul>
         </div>
         <div class="img us"></div>
